<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WyFy</string>
    <string name="ssid_label">SSID</string>
    <string name="password_label">Password</string>
    <string name="security_label">Security</string>
    <string name="nopass_label">None</string>
    <string name="wep_label">WEP</string>
    <string name="wpa_label">WPA</string>
    <string name="hidden_label">Hidden</string>
    <string name="title_activity_write_tag">WriteTagActivity</string>
    <string name="tap_tag">Tap tag to write&#8230;</string>
    <string name="incompatible_tag">Incompatible tag; please try another</string>
    <string name="error_formatting_tag">Error formatting tag</string>
    <string name="error_writing_tag">Error writing tag</string>
    <string name="read_only_tag">Read-only tag; please try another</string>
    <string name="tag_size_exceeded">Message size %1$d exceeds tag size %2$d; please try another</string>
    <string name="write_tag_label">Write tag&#8230;</string>
    <string name="successfully_added_wifi">Successfully added %1$s</string>
    <string name="successfully_enabled_wifi">Successfully enabled %1$s</string>
    <string name="failed_to_enable_wifi">Failed to enable connection to %1$s</string>
    <string name="qr_code_label">QR Code</string>
    <string name="provider_authority_file">us.rader.wyfy.provider.file</string>
    <string name="share_label">Share QR&#8230;</string>
    <string name="unrecognized_request">Unrecognized request code</string>
    <string name="empty_tag">Empty tag; please try another</string>
    <string name="failed_to_write_protect_tag">Failed to write-protect tag</string>
    <string name="unrecognized_result_code">Unrecognized result code %1$d</string>
    <string name="canceled">Canceled</string>
    <string name="null_message">Status OK but message is null</string>
    <string name="empty_message">Empty message</string>
    <string name="unparseable_payload">Unparseable payload</string>
    <string name="initialized_from_active_connection">Initialized from active connection to %1$s</string>
    <string name="no_active_connection">No active connection</string>
    <string name="scan_qr_label">Scan QR&#8230;</string>
    <string name="error_scanning_qr_code">Error scanning QR code</string>
    <string name="unsupported_qr_code">Unsupported QR code %1$s</string>
    <string name="delete_label">Delete</string>
    <string name="delete_selected_label">Delete Selected</string>
    <string name="delete_rows_label">Database</string>
    <string name="title_activity_delete_rows">Database</string>
    <string name="delete_ssid_prompt">Delete %1$s?</string>

</resources>
