<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wifi_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/ssid_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding" >

        <TextView
            android:id="@+id/ssid_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssid_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/ssid_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textNoSuggestions" />
    </TableRow>

    <TableRow
        android:id="@+id/password_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding" >

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:id="@+id/security_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding" >

        <TextView
            android:id="@+id/security_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/security_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

            <RadioButton
                android:id="@+id/nopass_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/nopass_label" />

            <RadioButton
                android:id="@+id/wep_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wep_label" />

            <RadioButton
                android:id="@+id/wpa_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wpa_label" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:id="@+id/hidden_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/row_padding" >

        <CheckBox
            android:id="@+id/hidden_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/hidden_label" />
    </TableRow>

</TableLayout>